overflow scroll issue fixed

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,1 +1,5 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css');
+
+body {
+  overflow-y: scroll;
+}
